--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <form class="paypal-button" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
       <input type="hidden" name="cmd" value="_xclick">
-      <input type="hidden" name="business" value="https://www.paypal.me/Patrik5868">
+      <input type="hidden" name="business" value="patrickciebien@icloud.com">
       <input type="hidden" name="item_name" value="LED Galaxy Nachtlicht">
       <input type="hidden" name="amount" value="19.99">
       <input type="hidden" name="currency_code" value="EUR">
@@ -104,7 +104,7 @@
 
     <form class="paypal-button" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
       <input type="hidden" name="cmd" value="_xclick">
-      <input type="hidden" name="business" value="https://www.paypal.me/Patrik5868">
+      <input type="hidden" name="business" value="patrickciebien@icloud.com">
       <input type="hidden" name="item_name" value="Wireless Auto Ladegerät">
       <input type="hidden" name="amount" value="29.99">
       <input type="hidden" name="currency_code" value="EUR">
@@ -121,7 +121,7 @@
 
     <form class="paypal-button" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
       <input type="hidden" name="cmd" value="_xclick">
-      <input type="hidden" name="business" value="https://www.paypal.me/Patrik5868">
+      <input type="hidden" name="business" value="patrickciebien@icloud.com">
       <input type="hidden" name="item_name" value="Mini Massage Gun">
       <input type="hidden" name="amount" value="39.99">
       <input type="hidden" name="currency_code" value="EUR">
