--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
 
   <!-- PRODUKT 1 -->
   <div class="product">
-    <img src="https://ae01.alicdn.com/kf/S8c88c3b7a8ef4a9aa9a5f69a4fdbdd16M.jpg" alt="LED Galaxy Nachtlicht">
+    <img src="galaxy1.jpg.JPG" alt="Galaxy Licht 1">
+    <img src="galaxy2.jpg.JPG" alt="Galaxy Licht 2">
+    <img src="galaxy3.jpg.JPG" alt="Galaxy Licht 3">
+    <img src="galaxy4.jpg.JPG" alt="Galaxy Licht 4">
     <h2>LED Galaxy Nachtlicht</h2>
     <p>Entspannende Sternenprojektion für dein Zimmer.</p>
     <p class="price">19,99 €</p>
