--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <!-- PRODUKT 2 -->
   <div class="product">
-    <img src="https://ae01.alicdn.com/kf/S4e2c9f94c97c4b3fa8e6b6a07a4efefbF.jpg" alt="Wireless Auto Ladegerät">
+    <img src=carhold1.jpg.AVIF" alt="Car Holder 1">
     <h2>Wireless Auto-Ladegerät</h2>
     <p>Kabelloses Laden im Auto – hält & lädt dein Handy.</p>
     <p class="price">29,99 €</p>
