--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background: #f2f2f2;
+      background-color: #eeeeee;
+      background-image: radial-gradient(#d6d6d6 1px, transparent 1px);
+      background-size: 20px 20px;
       color: #333;
     }
 
