--- a/index.html
+++ b/index.html
@@ -69,7 +69,63 @@
 
     a { color: #ccc; }
   </style>
-</head>
+<style>
+.legal {
+  max-width: 900px;
+  margin: 60px auto;
+  padding: 30px;
+  background: #f7f7f7;
+  border-radius: 12px;
+  color: #333;
+  font-size: 15px;
+}
+
+.legal h2 {
+  margin-bottom: 20px;
+}
+
+.legal h3 {
+  margin-top: 20px;
+}
+</style>
+<style>
+.legal {
+  max-width: 900px;
+  margin: 60px auto;
+  padding: 30px;
+  background: #f7f7f7;
+  border-radius: 12px;
+  color: #333;
+  font-size: 15px;
+}
+
+.legal h2 {
+  margin-bottom: 20px;
+}
+
+.legal h3 {
+  margin-top: 20px;
+}
+</style>
+<style>
+.legal {
+  max-width: 900px;
+  margin: 60px auto;
+  padding: 30px;
+  background: #f7f7f7;
+  border-radius: 12px;
+  color: #333;
+  font-size: 15px;
+}
+
+.legal h2 {
+  margin-bottom: 20px;
+}
+
+.legal h3 {
+  margin-top: 20px;
+}
+</style> </head>
 
 <body>
 
