--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
 
   <!-- PRODUKT 3 -->
   <div class="product">
-    <img src="https://ae01.alicdn.com/kf/Sa51f1a3b11d64a65a3ccbe0e8f8dcbf6x.jpg" alt="Mini Massage Gun">
-    <h2>Mini Massage Gun</h2>
-    <p>Leistungsstark & kompakt – perfekt für Muskelerholung.</p>
-    <p class="price">39,99 €</p>
+    <img src="rosebar1.jpg.JPG>
+    <h2>Roter Rosenbär</h2>
+    <p>Perfekt für ein Kleines Geschenk. 🧸</p>
+    <p class="price">9,99 €</p>
 
     <form class="paypal-button" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
       <input type="hidden" name="cmd" value="_xclick">
       <input type="hidden" name="business" value="patrickciebien@icloud.com">
-      <input type="hidden" name="item_name" value="Mini Massage Gun">
-      <input type="hidden" name="amount" value="39.99">
+      <input type="hidden" name="item_name" value="Rosenbär">
+      <input type="hidden" name="amount" value="9.99">
       <input type="hidden" name="currency_code" value="EUR">
       <input type="submit" value="Mit PayPal kaufen">
     </form>
