--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
   <!-- PRODUKT 3 -->
   <div class="product">
-    <img src="rosebar1.jpg.JPG>
+    <img src="rosebar1.jpg.JPG" alt="Rosebar 1">
     <h2>Roter Rosenbär</h2>
     <p>Perfekt für ein Kleines Geschenk. 🧸</p>
     <p class="price">9,99 €</p>
