--- a/index.html
+++ b/index.html
@@ -141,5 +141,11 @@
   </p>
 </footer>
 
+<a href="https://www.tiktok.com/@DEINUSERNAME"
+   class="tiktok-float"
+   target="_blank"
+   rel="noopener noreferrer">
+    <img src="assets/tiktok.png" alt="TikTok">
+</a> 
 </body>
 </html>
