--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
   </p>
 </footer>
 
-<a href="https://www.tiktok.com/@DEINUSERNAME"
+<a href="https://www.tiktok.com/@novvacart"
    class="tiktok-float"
    target="_blank"
    rel="noopener noreferrer">
-    <img src="assets/tiktok.png" alt="TikTok">
+    <img src="Tiktok.PNG" alt="TikTok">
 </a> 
 </body>
 </html>
