--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
       gap: 25px;
       padding: 40px;
     }
+.tiktok-float {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 9999;
+}
 
+.tiktok-float img {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+}
     .product {
       background: white;
       width: 300px;
