--- a/index.html
+++ b/index.html
@@ -29,18 +29,7 @@
       gap: 25px;
       padding: 40px;
     }
-.tiktok-float {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    z-index: 9999;
-}
 
-.tiktok-float img {
-    width: 50px;
-    height: 50px;
-    cursor: pointer;
-}
     .product {
       background: white;
       width: 300px;
@@ -79,6 +68,22 @@
     }
 
     a { color: #ccc; }
+
+    /* =====================
+       TIKTOK BILD NORMAL (nicht fixiert)
+    ===================== */
+    .tiktok-float {
+      display: block;
+      text-align: center; /* Bild zentrieren */
+      margin: 20px auto;  /* Abstand oben/unten */
+    }
+
+    .tiktok-float img {
+      width: 50px;
+      height: 50px;
+      cursor: pointer;
+    }
+
   </style>
 </head>
 
@@ -178,3 +183,67 @@ const color2 = document.getElementById("color2");
 const image2 = document.getElementById("product2Image");
 
 function updateProduct2Image() {
+  const model = model2.value;
+  const color = color2.value;
+
+  image2.src = `case_${model}_${color}.jpg`;
+}
+
+model2.addEventListener("change", updateProduct2Image);
+color2.addEventListener("change", updateProduct2Image);
+</script>
+
+  <!-- PRODUKT 2 -->
+  <div class="product">
+    <img src="carhold1.jpg.AVIF" alt="Car Holder 1">
+    <h2>Wireless Auto-Ladegerät</h2>
+    <p>Kabelloses Laden im Auto – hält & lädt dein Handy.</p>
+    <p class="price">29,99 €</p>
+
+    <form class="paypal-button" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+      <input type="hidden" name="cmd" value="_xclick">
+      <input type="hidden" name="business" value="patrikempfang@gmail.com">
+      <input type="hidden" name="item_name" value="Wireless Auto Ladegerät">
+      <input type="hidden" name="amount" value="29.99">
+      <input type="hidden" name="currency_code" value="EUR">
+      <input type="submit" value="Mit PayPal kaufen">
+    </form>
+  </div>
+
+  <!-- PRODUKT 3 -->
+  <div class="product">
+    <img src="rosebar1.jpg.JPG" alt="Rosebar 1">
+    <h2>Roter Rosenbär</h2>
+    <p>Perfekt für ein Kleines Geschenk. 🧸</p>
+    <p class="price">9,99 €</p>
+
+    <form class="paypal-button" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+      <input type="hidden" name="cmd" value="_xclick">
+      <input type="hidden" name="business" value="patrikempfang@gmail.com">
+      <input type="hidden" name="item_name" value="Rosenbär">
+      <input type="hidden" name="amount" value="9.99">
+      <input type="hidden" name="currency_code" value="EUR">
+      <input type="submit" value="Mit PayPal kaufen">
+    </form>
+  </div>
+
+</div>
+
+<footer>
+  <p>✔ Sichere Zahlung mit PayPal</p>
+  <p>📦 Lieferzeit: 10–20 Werktage (Direktversand)</p>
+  <p>
+    <a href="#">Impressum</a> | <a href="#">Datenschutz</a>
+  </p>
+</footer>
+
+<!-- TikTok Button jetzt unten auf der Seite -->
+<a href="https://www.tiktok.com/@novvacart"
+   class="tiktok-float"
+   target="_blank"
+   rel="noopener noreferrer">
+    <img src="Tiktok.PNG" alt="TikTok">
+</a> 
+
+</body>
+</html>
