--- a/index.html
+++ b/index.html
@@ -50,13 +50,65 @@
       margin: 10px 0;
     }
 
-    .paypal-button input {
+    /* ===== NEU: Auswahl modern ===== */
+    .select-row {
+      display: flex;
+      gap: 12px;
+      justify-content: center;
+      margin: 15px 0;
+    }
+
+    .select-group {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .select-group label {
+      font-size: 14px;
+      font-weight: bold;
+      margin-bottom: 4px;
+    }
+
+    select {
+      width: 130px;
+      padding: 10px 12px;
+      font-size: 15px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+      background: #f9f9f9;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    select:hover {
+      border-color: #2563eb;
+    }
+
+    select:focus {
+      outline: none;
+      border-color: #2563eb;
+      box-shadow: 0 0 0 3px rgba(37,99,235,0.2);
+    }
+
+    /* ===== PayPal Button GELB ===== */
+    .paypal-button input,
+    form input[type="submit"] {
       background: #ffc439;
       border: none;
-      padding: 12px 20px;
+      padding: 14px 22px;
       font-size: 16px;
-      border-radius: 6px;
+      font-weight: bold;
+      border-radius: 10px;
       cursor: pointer;
+      transition: all 0.2s ease;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+    }
+
+    .paypal-button input:hover,
+    form input[type="submit"]:hover {
+      background: #ffb300;
+      transform: translateY(-2px);
     }
 
     footer {
@@ -67,12 +119,10 @@
       font-size: 14px;
     }
 
-    /* Impressum & Datenschutz weiß */
     footer a {
       color: #fff;
     }
 
-    /* TikTok Logo im Footer-Bereich */
     .tiktok-footer {
       margin-top: 15px;
       display: inline-block;
@@ -106,48 +156,43 @@
     <p>Stoßfeste Handyhülle mit MagSafe – schlank & modern.</p>
     <p class="price">8,99 €</p>
 
-    <label><strong>Farbe:</strong></label><br>
-    <select id="color2">
-      <option value="black">Schwarz</option>
-      <option value="pink">Pink</option>
-      <option value="green">Grün</option>
-      <option value="blue">Blau</option>
-      <option value="red">Rot</option>
-    </select>
+    <div class="select-row">
+      <div class="select-group">
+        <label>Farbe</label>
+        <select id="color2">
+          <option value="black">Schwarz</option>
+          <option value="pink">Pink</option>
+          <option value="green">Grün</option>
+          <option value="blue">Blau</option>
+          <option value="red">Rot</option>
+        </select>
+      </div>
 
-    <br><br>
-
-    <label><strong>Modell:</strong></label><br>
-    <select id="model2">
-      <option value="iphone11">iPhone 11</option>
-      <option value="iphone11pro">iPhone 11 Pro</option>
-      <option value="iphone11promax">iPhone 11 Pro Max</option>
-      <option value="iphone12">iPhone 12</option>
-      <option value="iphone12mini">iPhone 12 mini</option>
-      <option value="iphone12pro">iPhone 12 Pro</option>
-      <option value="iphone12promax">iPhone 12 Pro Max</option>
-      <option value="iphone13">iPhone 13</option>
-      <option value="iphone13mini">iPhone 13 mini</option>
-      <option value="iphone13pro">iPhone 13 Pro</option>
-      <option value="iphone13promax">iPhone 13 Pro Max</option>
-      <option value="iphone14">iPhone 14</option>
-      <option value="iphone14plus">iPhone 14 Plus</option>
-      <option value="iphone14pro">iPhone 14 Pro</option>
-      <option value="iphone14promax">iPhone 14 Pro Max</option>
-      <option value="iphone15">iPhone 15</option>
-      <option value="iphone15plus">iPhone 15 Plus</option>
-      <option value="iphone15pro">iPhone 15 Pro</option>
-      <option value="iphone15promax">iPhone 15 Pro Max</option>
-      <option value="iphone16">iPhone 16</option>
-      <option value="iphone16plus">iPhone 16 Plus</option>
-      <option value="iphone16pro">iPhone 16 Pro</option>
-      <option value="iphone16promax">iPhone 16 Pro Max</option>
-      <option value="iphone17">iPhone 17</option>
-      <option value="iphone17pro">iPhone 17 Pro</option>
-      <option value="iphone17promax">iPhone 17 Pro Max</option>
-    </select>
-
-    <br><br>
+      <div class="select-group">
+        <label>Modell</label>
+        <select id="model2">
+          <option value="iphone11">iPhone 11</option>
+          <option value="iphone11pro">iPhone 11 Pro</option>
+          <option value="iphone11promax">iPhone 11 Pro Max</option>
+          <option value="iphone12">iPhone 12</option>
+          <option value="iphone12mini">iPhone 12 mini</option>
+          <option value="iphone12pro">iPhone 12 Pro</option>
+          <option value="iphone12promax">iPhone 12 Pro Max</option>
+          <option value="iphone13">iPhone 13</option>
+          <option value="iphone13mini">iPhone 13 mini</option>
+          <option value="iphone13pro">iPhone 13 Pro</option>
+          <option value="iphone13promax">iPhone 13 Pro Max</option>
+          <option value="iphone14">iPhone 14</option>
+          <option value="iphone14plus">iPhone 14 Plus</option>
+          <option value="iphone14pro">iPhone 14 Pro</option>
+          <option value="iphone14promax">iPhone 14 Pro Max</option>
+          <option value="iphone15">iPhone 15</option>
+          <option value="iphone15plus">iPhone 15 Plus</option>
+          <option value="iphone15pro">iPhone 15 Pro</option>
+          <option value="iphone15promax">iPhone 15 Pro Max</option>
+        </select>
+      </div>
+    </div>
 
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
       <input type="hidden" name="cmd" value="_xclick">
@@ -202,11 +247,7 @@
     <a href="#">Impressum</a> | <a href="#">Datenschutz</a>
   </p>
 
-  <!-- TikTok scrollt mit -->
-  <a href="https://www.tiktok.com/@novvacart"
-     class="tiktok-footer"
-     target="_blank"
-     rel="noopener noreferrer">
+  <a href="https://www.tiktok.com/@novvacart" class="tiktok-footer" target="_blank">
     <img src="Tiktok.PNG" alt="TikTok">
   </a>
 </footer>
